tests/libdef_scoped_class_identity/libdef_scoped_class_identity.exp
Error -------------------------------------------------------------------------------------------------- foo_lib.js:1:15

This name declaration overrides an existing binding `Foo` [1]. Overriding in library definitions can lead to surprising
behaviors. [libdef-override]

   foo_lib.js:1:15
   1| declare class Foo {} // error: libdef-override
                    ^^^

References:
   common_lib.js:1:15
   1| declare class Foo {}
                    ^^^ [1]



Found 1 error
